--- a/会议总结/第1，2次会议.md
+++ b/会议总结/第1，2次会议.md
@@ -2,7 +2,8 @@
 ======
 ```
 时间：
-第一次：2018/10/2
+第一次：2018/10/26 10：00 ~ 13：30
+第二次：2018/10/30 12：30 ~ 14：00
 ```
 前面两次会议主要是前期的准备工作，在这段时间内，主要做了以下一些事情：
 * 论文阅读
@@ -11,4 +12,4 @@
 * 确定论文方向
 这两次会议最重要的目的就是初步确定论文开题的方向，确定开题方向的时候需要考虑项目的深度以及可行性，争取做到一个比较好的平衡。在方向上一个很重要的点就是创新，这也是老师很强调的东西。
 
-在会议上，通过展示自己的开题构想以及论文展示，老师然后给出一些参考意见
+在会议上，通过展示自己的开题构想以及论文展示，老师然后给出一些指导意见，最终确定论文方向。
