--- a/会议总结/第1，2次会议.md
+++ b/会议总结/第1，2次会议.md
@@ -13,3 +13,5 @@
 这两次会议最重要的目的就是初步确定论文开题的方向，确定开题方向的时候需要考虑项目的深度以及可行性，争取做到一个比较好的平衡。在方向上一个很重要的点就是创新，这也是老师很强调的东西。
 
 在会议上，通过展示自己的开题构想以及论文展示，老师然后给出一些指导意见，最终确定论文方向。
+
+还有一点很重要的就是老师确定了2019/1/18号之前需要完成编码工作，接近两个半月的时间，不过我接下来三个月都要去实习，时间很赶，所以需要抓紧了。
