--- a/AndroidSrc/app/src/main/res/values/strings.xml
+++ b/AndroidSrc/app/src/main/res/values/strings.xml
@@ -1,27 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <string name="app_name">小车</string>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+    <string name="app_name">CAR</string>
     <string name="action_settings">Settings</string>
-    <string name="loading">loading</string>
-    <string name="search">搜索</string>
-    <string name="send">发送</string>
-    <string name="not_connected">你没有连接到一个设备</string>
-    <string name="bt_not_enabled_leaving">蓝牙没开启，退出应用</string>
-    <string name="title_connecting">正在连接...</string>
-    <string name="title_connected_to">连接到%1$s</string>
-    <string name="title_not_connected">没有连接</string>
-    <string name="scanning">扫描...</string>
-    <string name="select_device">选择设备连接</string>
-    <string name="none_paired">没有设备配对</string>
-    <string name="none_found">没有找到</string>
-    <string name="title_paired_devices">配对的设备</string>
-    <string name="title_other_devices">其他可用设备</string>
-    <string name="button_scan">扫描</string>
-    <string name="con">连接设备</string>
-    <string name="secure_connect">搜索并连接小车</string>
-    <string name="discoverable">可被附近蓝牙搜索</string>
-    <string name="up">前</string>
-    <string name="back">后</string>
-    <string name="left">左</string>
-    <string name="right">右</string>
+    <string name="loading">Loading</string>
+    <string name="search">Scan</string>
+    <!--  BluetoothChat -->
+    <string name="send">Send</string>
+    <string name="not_connected">You are not connected to a device</string>
+    <string name="bt_not_enabled_leaving">Bluetooth is not open, exit application</string>
+    <string name="title_connecting">Connecting...</string>
+    <string name="title_connected_to">Connect to<xliff:g id="device_name">%1$s</xliff:g></string>
+    <string name="title_not_connected">Disconnect</string>
+
+    <!--  DeviceListActivity -->
+    <string name="scanning">Scan...</string>
+    <string name="select_device">Select to connect</string>
+    <string name="none_paired">No device pairing</string>
+    <string name="none_found">Not find</string>
+    <string name="title_paired_devices">Paired devices</string>
+    <string name="title_other_devices">Other available devices</string>
+    <string name="button_scan">Scan</string>
+
+    <!-- colorPanel -->
+    <string name="con">Connecting device</string>
+
+    <!-- Options Menu -->
+    <string name="secure_connect">Search and connect car</string>
+    <string name="discoverable">Bluetooth search nearby</string>
+    <string name="up">Forward</string>
+    <string name="back">Back</string>
+    <string name="left">Turn left</string>
+    <string name="right">Turn right</string>
 </resources>
